--- a/BBI/index.html
+++ b/BBI/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
+<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brilliant Brain Indonesia Dashboard</title>
@@ -25,7 +29,7 @@
   <div class="main-content">
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+      <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
