--- a/BBI/index.html
+++ b/BBI/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<link rel="stylesheet" href="{{ asset('css/style.css') }}">
-
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brilliant Brain Indonesia Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <div class="sidebar">
@@ -18,10 +15,43 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#" class="active"><span class="icon">🏠</span> Beranda</a></li>
-        <li><a href="#"><span class="icon">🏢</span> Cabang</a></li>
-        <li><a href="#"><span class="icon">👥</span> Siswa</a></li>
-        <li><a href="#"><span class="icon">🎓</span> Alumni</a></li>
+        <li class="menu-item">
+          <a href="#" class="menu-link active">
+            <span class="icon"><i class="fas fa-home"></i></span> Beranda
+          </a>
+        </li>
+        <li class="menu-item dropdown">
+          <a href="#" class="menu-link">
+            <span class="icon"><i class="fas fa-building"></i></span> Cabang <span class="arrow">></span>
+          </a>
+          <ul class="submenu">
+            <li><a href="#">Sarapung</a></li>
+            <li><a href="#">Bitung</a></li>
+            <li><a href="#">Tomohon</a></li>
+            <li><a href="#">Kotamobagu</a></li>
+            <li><a href="#">Gorontalo</a></li>
+            <li><a href="#">Paniki</a></li>
+            <li><a href="#">Ranotana</a></li>
+          </ul>
+        </li>
+        <li class="menu-item dropdown">
+          <a href="#" class="menu-link">
+            <span class="icon"><i class="fas fa-users"></i></span> Siswa <span class="arrow">></span>
+          </a>
+          <ul class="submenu">
+            <li><a href="#">Daftar Siswa</a></li>
+            <li><a href="#">Tambah Siswa</a></li>
+          </ul>
+        </li>
+        <li class="menu-item dropdown">
+          <a href="#" class="menu-link">
+            <span class="icon"><i class="fas fa-graduation-cap"></i></span> Alumni <span class="arrow">></span>
+          </a>
+          <ul class="submenu">
+            <li><a href="#">Daftar Alumni</a></li>
+            <li><a href="#">Testimoni Alumni</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </div>
@@ -29,7 +59,7 @@
   <div class="main-content">
     <header>
       <div class="logo">
-      <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
@@ -47,10 +77,11 @@
         <p>Brilliant Brain Indonesia | Manado, Indonesia</p>
       </div>
       <div class="footer-center">
-        <a href="#" class="social-icon">🌐</a>
-        <a href="#" class="social-icon">📱</a>
-        <a href="#" class="social-icon">📸</a>
-        <a href="#" class="social-icon">📘</a>
+        <!-- Ganti dengan ikon media sosial -->
+        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" class="social-icon"><i class="fab fa-tiktok"></i></a>
       </div>
       <div class="footer-right">
         <div class="contact-info">
