--- a/#BBI/index.html
+++ b/#BBI/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brilliant Brain Indonesia Dashboard</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="{{ asset('css/style.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -59,7 +59,7 @@
   <div class="main-content">
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+      <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
@@ -77,7 +77,6 @@
         <p>Brilliant Brain Indonesia | Manado, Indonesia</p>
       </div>
       <div class="footer-center">
-        <!-- Ganti dengan ikon media sosial -->
         <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
