--- a/#BBI/index.html
+++ b/#BBI/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brilliant Brain Indonesia Dashboard</title>
-  <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li class="menu-item">
-          <a href="#" class="menu-link active">
+          <a href="#" id="berandaLink" class="menu-link active">
             <span class="icon"><i class="fas fa-home"></i></span> Beranda
           </a>
         </li>
@@ -25,13 +25,13 @@
             <span class="icon"><i class="fas fa-building"></i></span> Cabang <span class="arrow">></span>
           </a>
           <ul class="submenu">
-            <li><a href="#">Sarapung</a></li>
-            <li><a href="#">Bitung</a></li>
-            <li><a href="#">Tomohon</a></li>
-            <li><a href="#">Kotamobagu</a></li>
-            <li><a href="#">Gorontalo</a></li>
-            <li><a href="#">Paniki</a></li>
-            <li><a href="#">Ranotana</a></li>
+            <li><a href="#" class="branch-link" data-branch="Sarapung">Sarapung</a></li>
+            <li><a href="#" class="branch-link" data-branch="Bitung">Bitung</a></li>
+            <li><a href="#" class="branch-link" data-branch="Tomohon">Tomohon</a></li>
+            <li><a href="#" class="branch-link" data-branch="Kotamobagu">Kotamobagu</a></li>
+            <li><a href="#" class="branch-link" data-branch="Gorontalo">Gorontalo</a></li>
+            <li><a href="#" class="branch-link" data-branch="Paniki">Paniki</a></li>
+            <li><a href="#" class="branch-link" data-branch="Ranotana">Ranotana</a></li>
           </ul>
         </li>
         <li class="menu-item dropdown">
@@ -40,7 +40,6 @@
           </a>
           <ul class="submenu">
             <li><a href="#">Daftar Siswa</a></li>
-            <li><a href="#">Tambah Siswa</a></li>
           </ul>
         </li>
         <li class="menu-item dropdown">
@@ -59,19 +58,78 @@
   <div class="main-content">
     <header>
       <div class="logo">
-      <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
       </div>
     </header>
 
-    <section class="welcome-section">
+    <section id="berandaSection" class="welcome-section">
       <h1>BIMBEL BRILLIANT BRAIN INDONESIA</h1>
       <p>QUALITY IS OUR PRIORITY!</p>
       <p>AYO BERGABUNG BERSAMA KAMI</p>
     </section>
 
+    <section id="cabang" class="content-section">
+      <div class="chart-container">
+        <canvas id="chartCabang"></canvas>
+      </div>    
+
+    <section id="branchSection" class="hidden">
+      <header>
+        <h1 id="branchTitle"></h1>
+      </header>
+      <div class="chart-container">
+        <canvas id="branchPieChart"></canvas>
+      </div>
+    </section>
+    <div class="search-bar">
+    <input
+      type="text"
+      id="searchInput"
+      placeholder="Cari nama siswa..."
+      onkeyup="searchTable()"
+    />
+  </div>
+
+  <table id="dataTable" class="hidden">
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Nama</th>
+        <th>Peminatan</th>
+        <th>Jenis Kelamin</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>John Doe</td>
+        <td>AKPOL</td>
+        <td>Laki-Laki</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Jane Smith</td>
+        <td>AKMIL</td>
+        <td>Perempuan</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Michael Johnson</td>
+        <td>KEDINASAN</td>
+        <td>Laki-Laki</td>
+      </tr>
+        <td>4</td>
+        <td>Sarah Brown</td>
+        <td>SNBT</td>
+        <td>Perempuan</td>
+      </tr>
+    </tbody>
+  </table>  
+
+  
     <footer>
       <div class="footer-left">
         <p>Brilliant Brain Indonesia | Manado, Indonesia</p>
@@ -91,5 +149,7 @@
       </div>
     </footer>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
