--- a/#BBI/index.html
+++ b/#BBI/index.html
@@ -25,13 +25,13 @@
             <span class="icon"><i class="fas fa-building"></i></span> Cabang <span class="arrow">></span>
           </a>
           <ul class="submenu">
-            <li><a href="#" class="branch-link" data-branch="Sarapung">Sarapung</a></li>
-            <li><a href="#" class="branch-link" data-branch="Bitung">Bitung</a></li>
-            <li><a href="#" class="branch-link" data-branch="Tomohon">Tomohon</a></li>
-            <li><a href="#" class="branch-link" data-branch="Kotamobagu">Kotamobagu</a></li>
-            <li><a href="#" class="branch-link" data-branch="Gorontalo">Gorontalo</a></li>
-            <li><a href="#" class="branch-link" data-branch="Paniki">Paniki</a></li>
-            <li><a href="#" class="branch-link" data-branch="Ranotana">Ranotana</a></li>
+            <li><a href="#" class="branch-link" data-branch="Sarapung" data-address="Jl. Sarapung No. 1, Manado">Sarapung</a></li>
+            <li><a href="#" class="branch-link" data-branch="Bitung" data-address="Jl. Bitung Raya, Bitung">Bitung</a></li>
+            <li><a href="#" class="branch-link" data-branch="Tomohon" data-address="Jl. Tomohon No. 2, Tomohon">Tomohon</a></li>
+            <li><a href="#" class="branch-link" data-branch="Kotamobagu" data-address="Jl. Kotamobagu No. 3, Kotamobagu">Kotamobagu</a></li>
+            <li><a href="#" class="branch-link" data-branch="Gorontalo" data-address="Jl. Gorontalo, Gorontalo">Gorontalo</a></li>
+            <li><a href="#" class="branch-link" data-branch="Paniki" data-address="Jl. Paniki, Manado">Paniki</a></li>
+            <li><a href="#" class="branch-link" data-branch="Ranotana" data-address="Jl. Ranotana No. 4, Manado">Ranotana</a></li>
           </ul>
         </li>
         <li class="menu-item dropdown">
@@ -56,9 +56,9 @@
   </div>
 
   <div class="main-content">
-    <header>
+    <header id="mainHeader">
       <div class="logo">
-         <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
@@ -71,85 +71,96 @@
       <p>AYO BERGABUNG BERSAMA KAMI</p>
     </section>
 
-    <section id="cabang" class="content-section">
-      <div class="chart-container">
-        <canvas id="chartCabang"></canvas>
-      </div>    
-
     <section id="branchSection" class="hidden">
-      <header>
-        <h1 id="branchTitle"></h1>
+      <header class="branch-header">
+        <h1 id="branchTitle" class="branch-name"></h1>
+        <p id="branchAddress" class="branch-address"></p>
       </header>
       <div class="chart-container">
-        <canvas id="branchPieChart"></canvas>
+        <canvas id="branchPieChart" width="300" height="300"></canvas>
       </div>
+      <div class="search-bar">
+        <input
+          type="text"
+          id="searchInput"
+          placeholder="Cari nama siswa..."
+          onkeyup="searchTable()"
+        />
+      </div>
+      <table id="dataTable">
+        <thead>
+          <tr>
+            <th>No</th>
+            <th>Nama</th>
+            <th>Peminatan</th>
+            <th>Jenis Kelamin</th>
+            <th>Alamat</th>
+            <th>Status Siswa</th>
+            <th>Cabang</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Rama Ijon Turnip</td>
+            <td>AKPOL</td>
+            <td>Laki-Laki</td>
+            <td>Batu Kota</td>
+            <td>Alumni</td>
+            <td>Sarapung</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Regita Reyne Ismail</td>
+            <td>AKMIL</td>
+            <td>Perempuan</td>
+            <td>Batu Kota</td>
+            <td>Alumni</td>
+            <td>Cabang Kotamobagu</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Juan Sirjon Lahope</td>
+            <td>KEDINASAN</td>
+            <td>Laki-Laki</td>
+            <td>Ketang Baru Lingkungan 3</td>
+            <td>Alumni</td>
+            <td>Sarapung</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Indah Gusti</td>
+            <td>SNBT</td>
+            <td>Perempuan</td>
+            <td>kleak</td>
+            <td>Siswa</td>
+            <td>Sarapung</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
-    <div class="search-bar">
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Cari nama siswa..."
-      onkeyup="searchTable()"
-    />
-  </div>
-
-  <table id="dataTable" class="hidden">
-    <thead>
-      <tr>
-        <th>No</th>
-        <th>Nama</th>
-        <th>Peminatan</th>
-        <th>Jenis Kelamin</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>1</td>
-        <td>John Doe</td>
-        <td>AKPOL</td>
-        <td>Laki-Laki</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Jane Smith</td>
-        <td>AKMIL</td>
-        <td>Perempuan</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Michael Johnson</td>
-        <td>KEDINASAN</td>
-        <td>Laki-Laki</td>
-      </tr>
-        <td>4</td>
-        <td>Sarah Brown</td>
-        <td>SNBT</td>
-        <td>Perempuan</td>
-      </tr>
-    </tbody>
-  </table>  
-
-  
+    
     <footer>
-      <div class="footer-left">
-        <p>Brilliant Brain Indonesia | Manado, Indonesia</p>
-      </div>
-      <div class="footer-center">
-        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="social-icon"><i class="fab fa-tiktok"></i></a>
-      </div>
-      <div class="footer-right">
-        <div class="contact-info">
-          <p>Hubungi Kami :</p>
-          <p>✉️ brilliant brain indonesia</p>
-          <p>📞 +62-811-435-565</p>
+      <div class="footer-container">
+        <div class="footer-left">
+          <p>Brilliant Brain Indonesia | Manado, Indonesia</p>
+        </div>
+        <div class="footer-center">
+          <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-tiktok"></i></a>
+        </div>
+        <div class="footer-right">
+          <div class="contact-info">
+            <p>Hubungi Kami :</p>
+            <p>✉️ brilliant brain indonesia</p>
+            <p>📞 +62-811-435-565</p>
+          </div>
         </div>
       </div>
     </footer>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="script.js"></script>
-</body>
-</html>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
+    
