--- a/#BBI/index.html
+++ b/#BBI/index.html
@@ -58,7 +58,7 @@
   <div class="main-content">
     <header id="mainHeader">
       <div class="logo">
-        <img src="logo.png" alt="Brilliant Brain Indonesia Logo" class="large-logo">
+        <img src="{{ asset('images/logo.png') }}" alt="Brilliant Brain Indonesia Logo" class="large-logo">
       </div>
       <div class="user-profile">
         <span class="icon">👤</span> Admin
